--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -44,6 +44,7 @@ body {
 /* Sidebar */
 .sidebar {
     width: 260px;
+    height: 100%;
     background: #f9fafb;
     border-right: 1px solid #e5e5e5;
     display: flex;
